Eerste render test
GELUKT

--- a/LemonEngine.Infrastructure/LemonEngine.Infrastructure.csproj
+++ b/LemonEngine.Infrastructure/LemonEngine.Infrastructure.csproj
@@ -51,13 +51,18 @@
     <Compile Include="Logic\Entity\IMaintainable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Render\Renderable\IRenderService.cs" />
+    <Compile Include="Render\Renderable\Model\IMaterialGroup.cs" />
+    <Compile Include="Render\Renderable\Model\IModelPart.cs" />
+    <Compile Include="Render\Renderable\Model\IModelPartFace.cs" />
     <Compile Include="Render\Renderable\Model\IModelRepository.cs" />
     <Compile Include="Render\Renderable\Model\IMaterialRepository.cs" />
     <Compile Include="Render\Renderable\Model\IMaterial.cs" />
     <Compile Include="Render\Renderable\Model\IModel.cs" />
     <Compile Include="Render\Renderable\IRenderable.cs" />
+    <Compile Include="Types\Int4.cs" />
     <Compile Include="Types\Render\Polygon.cs" />
     <Compile Include="Types\Render\Verticle.cs" />
+    <Compile Include="Types\Int3.cs" />
     <Compile Include="Types\Vec3.cs" />
   </ItemGroup>
   <ItemGroup>
