--- a/LemonEngine.Main/LemonEngine.Main.csproj
+++ b/LemonEngine.Main/LemonEngine.Main.csproj
@@ -93,6 +93,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\LemonEngine.Infrastructure\LemonEngine.Infrastructure.csproj">
+      <Project>{1810787D-C853-4D8F-B992-0DE04C14AD2E}</Project>
+      <Name>LemonEngine.Infrastructure</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LemonEngine.RenderLogic\LemonEngine.RenderLogic.csproj">
       <Project>{7CD2492E-8017-42E8-BCF5-9629F66F04EA}</Project>
       <Name>LemonEngine.RenderLogic</Name>
