--- a/LemonEngine.RenderLogic/LemonEngine.RenderLogic.csproj
+++ b/LemonEngine.RenderLogic/LemonEngine.RenderLogic.csproj
@@ -40,6 +40,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,7 +50,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Camera\Camera.cs" />
+    <Compile Include="Light\Light.cs" />
+    <Compile Include="MaterialLoader\MtlFileReader.cs" />
     <Compile Include="ModelLoader\ObjFileReader.cs" />
+    <Compile Include="Renderables\Material\Material.cs" />
+    <Compile Include="Renderables\Material\MaterialGroup.cs" />
+    <Compile Include="Renderables\Material\MaterialRepository.cs" />
     <Compile Include="Renderables\Model\Model.cs" />
     <Compile Include="Renderables\Model\ModelPart.cs" />
     <Compile Include="Renderables\Model\ModelPartFace.cs" />
@@ -57,11 +65,21 @@
     <Compile Include="RenderEnigne.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RenderService.cs" />
+    <Compile Include="RenderTools.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RenderTools.Designer.cs">
+      <DependentUpon>RenderTools.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="RenderTools.resx">
+      <DependentUpon>RenderTools.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LemonEngine.Infrastructure\LemonEngine.Infrastructure.csproj">
       <Project>{1810787D-C853-4D8F-B992-0DE04C14AD2E}</Project>
