--- a/LemonEngine.Logic/LemonEngine.Logic.csproj
+++ b/LemonEngine.Logic/LemonEngine.Logic.csproj
@@ -48,8 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Context\GameContext.cs" />
+    <Compile Include="Context\GraphicsContext.cs" />
+    <Compile Include="Entity\Entity.cs" />
     <Compile Include="LogicEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scene\GameScene.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -58,6 +62,10 @@
     <ProjectReference Include="..\LemonEngine.Infrastructure\LemonEngine.Infrastructure.csproj">
       <Project>{1810787D-C853-4D8F-B992-0DE04C14AD2E}</Project>
       <Name>LemonEngine.Infrastructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LemonEngine.RenderLogic\LemonEngine.RenderLogic.csproj">
+      <Project>{7CD2492E-8017-42E8-BCF5-9629F66F04EA}</Project>
+      <Name>LemonEngine.RenderLogic</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
