--- a/LemonEngine.Physics/LemonEngine.Physics.csproj
+++ b/LemonEngine.Physics/LemonEngine.Physics.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A70AD081-489C-43E3-9BEA-B982CEAD2537}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>Organodron.Main</RootNamespace>
-    <AssemblyName>Organodron.Main</AssemblyName>
+    <ProjectGuid>{D0DD18D3-4873-42D1-9BFE-61DF145D3974}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>LemonEngine.Physics</RootNamespace>
+    <AssemblyName>LemonEngine.Physics</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -34,7 +32,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,35 +40,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Game\Objects\Test\TestCube.cs" />
-    <Compile Include="Game\Scenes\WelcomeScene.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Window\OrganodronMainWindow.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Simulation\EntitySimulationUpdater.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\GameWindow\GameWindow.csproj">
-      <Project>{1B416651-A920-43F4-B934-CE3029506D66}</Project>
-      <Name>GameWindow</Name>
-    </ProjectReference>
     <ProjectReference Include="..\LemonEngine.Infrastructure\LemonEngine.Infrastructure.csproj">
-      <Project>{1810787D-C853-4D8F-B992-0DE04C14AD2E}</Project>
+      <Project>{1810787d-c853-4d8f-b992-0de04c14ad2e}</Project>
       <Name>LemonEngine.Infrastructure</Name>
     </ProjectReference>
-    <ProjectReference Include="..\LemonEngine.Logic\LemonEngine.Logic.csproj">
-      <Project>{5EE511E0-DA56-4992-83C5-5EE2AAA62961}</Project>
-      <Name>LemonEngine.Logic</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LemonEngine.RenderLogic\LemonEngine.RenderLogic.csproj">
-      <Project>{7CD2492E-8017-42E8-BCF5-9629F66F04EA}</Project>
-      <Name>LemonEngine.RenderLogic</Name>
-    </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="CollisionDetection\" />
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
